# rak-basic

./: BLOG_DRAFT.md  Dockerfile  README.md  agent.py  app.py  app_runtime_fix.py  benchmark_scale.py  index.html  mcp_server.py  protocol.html  pyproject.toml
static/: index.html  protocol.html
static/css/: styles.css  tokens.css
static/js/: demo.js
