[project]
name = "rak-minimal-release-demo"
version = "0.1.0"
description = "Minimal Redis Agent Kit demo with a tiny UI and UV workflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "redis-agent-kit[all]",
]

[tool.uv.sources]
redis-agent-kit = { path = "../redis-agent-kit/dist/redis_agent_kit-0.1.0.tar.gz" }
